[gd_scene load_steps=11 format=3 uid="uid://cs4tduc8jd2vn"]

[ext_resource type="Script" uid="uid://dm3sv1hfrba04" path="res://scripts/player.gd" id="1_0gfpk"]
[ext_resource type="PackedScene" uid="uid://cjursw5wdv40k" path="res://assets/scenes/InteractRaytscn.tscn" id="2_0hrit"]
[ext_resource type="Script" uid="uid://0c0cns6vn1s1" path="res://assets/scenes/documentos.gd" id="5_8sknh"]
[ext_resource type="Shader" uid="uid://dxotq2if8l73l" path="res://assets/shaders/monochrome.gdshader" id="5_60g6h"]
[ext_resource type="Script" uid="uid://5io2so8aapg5" path="res://scripts/reticle.gd" id="6_hrrj1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c6vv5"]
margin = 0.0
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nh07x"]
margin = 0.0
radius = 0.4
height = 1.2

[sub_resource type="SphereShape3D" id="SphereShape3D_00pic"]
radius = 0.4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dmvh"]
shader = ExtResource("5_60g6h")

[sub_resource type="CanvasTexture" id="CanvasTexture_4wcc8"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0gfpk")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_c6vv5")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_nh07x")
disabled = true

[node name="HeadChecker" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("SphereShape3D_00pic")
target_position = Vector3(0, 0.8, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)

[node name="Head" type="Node3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.168516, 0)

[node name="Eyes" type="Node3D" parent="Neck/Head"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head/Eyes"]
fov = 85.0

[node name="InteractRay" parent="Neck/Head/Eyes/Camera3D" instance=ExtResource("2_0hrit")]

[node name="Shaders" type="Control" parent="Neck/Head/Eyes/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Neck/Head/Eyes/Camera3D/Shaders"]
material = SubResource("ShaderMaterial_1dmvh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Control" parent="Neck/Head/Eyes/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="Neck/Head/Eyes/Camera3D/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_hrrj1")
DOT_RADIUS = 4.0

[node name="Documentos" type="CenterContainer" parent="Neck/Head/Eyes/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_8sknh")

[node name="Carta" type="TextureRect" parent="Neck/Head/Eyes/Camera3D/Documentos"]
visible = false
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
mouse_default_cursor_shape = 2
texture = SubResource("CanvasTexture_4wcc8")
